--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Test project Sebbia</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
 </head>
 <body>
 	<div id="mount_place"></div>
